Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-7387

Apple Trackpad's 3-finger swipe does not work in Qt Creator

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: P3: Somewhat important P3: Somewhat important
    • None
    • Qt Creator 2.5.0-rc
    • Editors
    • None
    • OS X 10.6.8, Apple Magic Trackpad
    • 789872a0f (master)

      The navigation gestures using 3-finger swipe on Apple trackpad have no effect in Qreator's editor. The gesture works in Finder and web browsers as back and forward shortcuts.

      Creator only accepts keystrokes as shortcuts. Apple's trackpad utility does not map the gestures to any key combo.

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            con Eike Ziller
            stephenju Stephen Chu
            Votes:
            1 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes