macOS: Support gestures for going back and forward

in the editor and help viewer, when setting macOS Trackpad preferences
to "Swipe between pages: Swipe with Three Fingers".

Fixes: QTCREATORBUG-7387
Change-Id: I1c2684f846d72bb98ba6626c3a04f01fb57b8e24
Reviewed-by: Tor Arne Vestbø <tor.arne.vestbo@qt.io>